--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-								<a href="https://www.codepen.io/DooDooDylan/full/oKGxPQ"> <!-- Change these to code links-->
+								<a href="https://github.com/DEurich/sk-tribute"> <!-- Change these to code links-->
 										<h2>Stephen King: Tribute Page</h2>
 										<div class="content">
 											<p>Built using: HTML5 & CSS3</p>
@@ -69,7 +69,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="https://codepen.io/DooDooDylan/full/jONvpWJ">
+									<a href="https://github.com/DEurich/Tetris">
 										<h2>Tetris</h2> <!-- Change these to code links-->
 										<div class="content">
 											<p>Built using: HTML5, CSS3, Javascript</p>
@@ -80,7 +80,7 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="https://codepen.io/DooDooDylan/full/gOOrEjV">
+									<a href="https://github.com/DEurich/Technical-Documentation-Page">
 										<h2>Technical Documentation Page</h2>
 										<div class="content">
 											<p>Built using: HTML5 & CSS3</p>
