--- a/projects.html
+++ b/projects.html
@@ -54,18 +54,40 @@
 							<!-- Text -->
 								<section>
 									<h2>Stephen King: Tribute Page</h2>
+									<p><a href="https://github.com/DEurich/SK-Tribute">https://github.com/DEurich/SK-Tribute</a></p>
 									<p>This was the very first project I completed after deciding to learn code.
 										I've kept it the way it is because I like to see how far I've come in my journey.
 										It's not built with anything special obviously, just plain HTML & CSS in CodePen.
 									</p>
 									<hr />
 									<h2>Tetris</h2>
+									<p><a href="https://github.com/DEurich/Tetris">https://github.com/DEurich/Tetris</a></p>
 									<p>Tetris was an app I coded about halfway through The Modern Javascript (2019) by Andrew Mead. 
 										I know that I learn by doing, and I needed a bigger project to work on that would require me to 
 										think, try, & apply. I had a lot of fun coding this. I learned way more than expected. 
 									</p>
 									<hr />
-									
+									<h2>Technical Documentation Page</h2>
+									<p><a href="https://github.com/DEurich/Technical-Documentation-Page">https://github.com/DEurich/Technical-Documentation-Page</a></p>
+									<p>This was a template I designed as part of a freecodecamp project. It is built using HTML5 & CSS3 and 
+										serves as a wonderful base for simple websites. 
+									</p>
+									<hr />
+									<h2>Katie's Tarot</h2>
+									<p><a href="https://github.com/DEurich/Tetris">https://github.com/DEurich/Tetris</a></p>
+									<p>Tetris was an app I coded about halfway through The Modern Javascript (2019) by Andrew Mead. 
+										I know that I learn by doing, and I needed a bigger project to work on that would require me to 
+										think, try, & apply. I had a lot of fun coding this. I learned way more than expected. 
+									</p>
+									<hr />
+									<h2>To-Do App</h2>
+									<p><strong>COMING SOON!</strong> Currently in the JS stage.
+									</p>
+									<hr />
+									<h2>Notes App</h>
+									<p><strong>Coming Soon!</strong> Currently in the JS stage.
+									</p>
+									<hr />
 								</section>
 							</div>
 					</div>
