--- a/projects.html
+++ b/projects.html
@@ -81,11 +81,11 @@
 									</p>
 									<hr />
 									<h2>To-Do App</h2>
-									<p><strong>COMING SOON!</strong> Currently in the JS stage.
+									<p><strong>COMING SOON!!</strong> Currently in the JS stage.
 									</p>
 									<hr />
 									<h2>Notes App</h>
-									<p><strong>Coming Soon!</strong> Currently in the JS stage.
+									<p><strong>Coming Soon!!</strong> Currently in the JS stage.
 									</p>
 									<hr />
 								</section>
