--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,7 @@
 										Currently in the JS stage.
 									</p>
 									<hr />
-									<h2>Notes App</h2>
+									<h2>Note's App</h2>
 									<p><strong>Coming Soon!!</strong> 
 										Currently in the JS stage.
 									</p>
