--- a/projects.html
+++ b/projects.html
@@ -74,10 +74,11 @@
 									</p>
 									<hr />
 									<h2>Katie's Tarot</h2>
-									<p><a href="https://github.com/DEurich/Tetris">https://github.com/DEurich/Tetris</a></p>
-									<p>Tetris was an app I coded about halfway through The Modern Javascript (2019) by Andrew Mead. 
-										I know that I learn by doing, and I needed a bigger project to work on that would require me to 
-										think, try, & apply. I had a lot of fun coding this. I learned way more than expected. 
+									<p><strong>Coming Soon!!</p>
+									<p>A website for all your Psychic & Metaphysical needs. This site will utilize HTMl5, CSS3, and JS.
+										features to be included; Memberships, Pay to chat feature, individual profiles as well as a store.
+										This site should be live soon!
+										
 									</p>
 									<hr />
 									<h2>To-Do App</h2>
