--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
 									</p>
 									<hr />
 									<h2>Katie's Tarot</h2>
-									<p><strong>Coming Soon!!</p>
+									<p><strong>Coming Soon!!</strong></p>
 									<p>A website for all your Psychic & Metaphysical needs. This site will utilize HTMl5, CSS3, and JS.
 										features to be included; Memberships, Pay to chat feature, individual profiles as well as a store.
 										This site should be live soon!
