--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,7 @@
 									</p>
 									<hr />
 									<h2>To-Do App</h2>
-									<p><strong>COMING SOON!!</strong>
+									<p><strong>Coming Soon!!</strong>
 										Currently in the JS stage.
 									</p>
 									<hr />
