--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 									<a href="">
 										<h2>Katie's Tarot</h2>
 										<div class="content">
-											<p>Built using: HTML5, CSS3, & Javascript</p>
+											<p>Coming Soon!</p>
 										</div>
 									</a>
 								</article>
