--- a/aboutme.html
+++ b/aboutme.html
@@ -102,7 +102,7 @@
 							</ul>
 						</section>
 						<ul class="copyright">
-							<li>&copy; Dylan Eurich. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Dylan Eurich. All rights reserved</li>
 						</ul>
 					</div>
 				</footer>
