--- a/aboutme.html
+++ b/aboutme.html
@@ -55,21 +55,37 @@
 								<section>
 									<h2>My Skillset</h2>
 									<span class="image main"><img src="images/skillchart.png" alt="" /></span>
-								</section>
-
-							<!-- Lists -->
-								<section>
+								<!-- Lists -->
 									<div class="row">
 										<div class="col-6 col-12-medium">
-											<h3>My Courses</h3>
+											<h3>Skills</h3>
 											<ul class="alt">
-												<li>The Modern Javascript (2019) - Andrew Mead - Udemy</li>
-												<li>Responsive Web Design - FreeCodeCamp</li>
-												<li>Javascript Algorithms & Data Structures - FreeCodeCamp</li>
+												<li>Javascript - ES5 & ES6</li>
+												<li>HTML5 - SEO & Accessability</li>
+												<li>CSS3</li>
 											</ul>
 										</div>
 									</div>
-									
+								</section>
+							
+								<section>
+									<div class="row">
+										<div class="col-6 col-12-medium">
+											<h3>My Certificates</h3>
+											<ul class="alt">
+												<li>Responsive Web Design - FreeCodeCamp</li>
+											</ul>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-6 col-12-medium">
+											<h3>My Active Courses</h3>
+											<ul class="alt">
+												<li>The Modern Javascript (2019) - Andrew Mead - Udemy</li>
+												<li>Javascript Algorithms & Data Structures - freecodecamp</li>
+											</ul>
+										</div>
+									</div>
 				<!-- Footer -->
 				<footer id="footer">
 					<div class="inner">
