--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Dylan Eurich Portfolio</title>
@@ -51,7 +47,8 @@
 						<div class="inner">
 							<header>
 								<h1>My Portfolio.</h1>
-								<p>If you can dream it. I can code it. </p>
+								<p>If you can dream it. I can code it.</p>
+								<p>Open to employment for junior / entry programming || dev roles.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
