--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 						<div class="inner">
 							<section>
 								<h2>Lets Get Coffee</h2>
-								<form method="post" action="#">
+								<form method="post" action="https://formspree.io/xnqqrope">
 									<div class="fields">
 										<div class="field half">
 											<input type="text" name="name" id="name" placeholder="Name" />
