--- a/aboutme.html
+++ b/aboutme.html
@@ -90,7 +90,7 @@
 				<footer id="footer">
 					<div class="inner">
 						<section>
-							<h2>Lets Get Coffee</h2>
+							<h2>Let's Get Coffee</h2>
 							<form method="post" action="https://formspree.io/xnqqrope">
 								<div class="fields">
 									<div class="field half">
