--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="">
-										<h2>Katie's Tarot</h2>
+									<a href="https://www.github.com/deurich/weather-app">
+										<h2>Weather App</h2>
 										<div class="content">
-											<p>Coming Soon!</p>
+											<p>Built using: HTML5, CSS3, Javascript</p>
 										</div>
 									</a>
 								</article>
@@ -100,7 +100,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<a href="">
-										<h2>To-Do App</h2>
+										<h2>Katie's Tarot</h2>
 										<div class="content">
 											<p>Coming Soon!</p>
 										</div>
@@ -111,7 +111,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="">
-										<h2>Notes App</h2>
+										<h2>Notes & To-Do App</h2>
 										<div class="content">
 											<p>Coming Soon!</p>
 										</div>
