--- a/projects.html
+++ b/projects.html
@@ -68,20 +68,20 @@
 										serves as a wonderful base for simple websites. 
 									</p>
 									<hr />
+									<h2>Weather App</h2>
+									<p><a href="https://github.com/DEurich/Weather-App">https://github.com/DEurich/Weather-App</p>
+									<p> This was an app put together to show how I can properly use an API in a web application. This was 
+										a terrific projet to work on. It was built using plain JavaScript, HTML5, and CSS3.
+									</p>
+									<hr />
 									<h2>Katie's Tarot</h2>
 									<p><strong>Coming Soon!!</strong></p>
 									<p>A website for all your Psychic & Metaphysical needs. This site will utilize HTMl5, CSS3, and JS.
 										features to be included; Memberships, Pay to chat feature, individual profiles as well as a store.
 										This site should be live soon!
-										
 									</p>
 									<hr />
-									<h2>To-Do App</h2>
-									<p><strong>Coming Soon!!</strong>
-										Currently in the JS stage.
-									</p>
-									<hr />
-									<h2>Note's App</h2>
+									<h2>Note's & To-Do App</h2>
 									<p><strong>Coming Soon!!</strong> 
 										Currently in the JS stage.
 									</p>
