--- a/projects.html
+++ b/projects.html
@@ -70,8 +70,9 @@
 									<hr />
 									<h2>Weather App</h2>
 									<p><a href="https://github.com/DEurich/Weather-App">https://github.com/DEurich/Weather-App</p>
-									<p> This was an app put together to show how I can properly use an API in a web application. This was 
-										a terrific projet to work on. It was built using plain JavaScript, HTML5, and CSS3.
+									<p> This was an app put together to show how I can properly use an API in a web application. A simple
+										clean design, that does exactly what you need. This was a terrific project to work on. 
+										It was built using plain JavaScript, HTML5, and CSS3 while using the openweathermap.org API.
 									</p>
 									<hr />
 									<h2>Katie's Tarot</h2>
