--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,7 @@
 									</p>
 									<hr />
 									<h2>Note's & To-Do App</h2>
-									<p><strong>Coming Soon!!</strong> 
+									<p><strong>Coming Soon!</strong> 
 										Currently in the JS stage.
 									</p>
 									<hr />
