--- a/projects.html
+++ b/projects.html
@@ -69,8 +69,8 @@
 									</p>
 									<hr />
 									<h2>Weather App</h2>
-									<p><a href="https://github.com/DEurich/Weather-App">https://github.com/DEurich/Weather-App</p>
-									<p> This was an app put together to show how I can properly use an API in a web application. A simple
+									<p><a href="https://github.com/DEurich/Weather-App">https://github.com/DEurich/Weather-App</a></p>
+									<p> his was an app put together to show how I can properly use an API in a web application. A simple
 										clean design, that does exactly what you need. This was a terrific project to work on. 
 										It was built using plain JavaScript, HTML5, and CSS3 while using the openweathermap.org API.
 									</p>
