--- a/projects.html
+++ b/projects.html
@@ -53,33 +53,37 @@
 									<p>This was the very first project I completed after deciding to learn code.
 										I've kept it the way it is because I like to see how far I've come in my journey.
 										It's not built with anything special obviously, just plain HTML & CSS in CodePen.
+										Live version coming soon!
 									</p>
 									<hr />
 									<h2>Tetris</h2>
 									<p><a href="https://github.com/DEurich/Tetris">https://github.com/DEurich/Tetris</a></p>
 									<p>Tetris was an app I coded about halfway through The Modern Javascript (2019) by Andrew Mead. 
 										I know that I learn by doing, and I needed a bigger project to work on that would require me to 
-										think, try, & apply. I had a lot of fun coding this. I learned way more than expected. 
+										think, try, & apply. I had a lot of fun coding this. I learned way more than expected.
+										Live version coming soon!
 									</p>
 									<hr />
 									<h2>Technical Documentation Page</h2>
 									<p><a href="https://github.com/DEurich/Technical-Documentation-Page">https://github.com/DEurich/Technical-Documentation-Page</a></p>
 									<p>This was a template I designed as part of a freecodecamp project. It is built using HTML5 & CSS3 and 
 										serves as a wonderful base for simple websites. 
+										Live version coming soon!
 									</p>
 									<hr />
 									<h2>Weather App</h2>
 									<p><a href="https://github.com/DEurich/Weather-App">https://github.com/DEurich/Weather-App</a></p>
-									<p> his was an app put together to show how I can properly use an API in a web application. A simple
+									<p> his was an app put together to show how I can properly use an API in a web application. A simple,
 										clean design, that does exactly what you need. This was a terrific project to work on. 
 										It was built using plain JavaScript, HTML5, and CSS3 while using the openweathermap.org API.
+										Live version coming soon!
 									</p>
 									<hr />
 									<h2>Katie's Tarot</h2>
 									<p><strong>Coming Soon!!</strong></p>
 									<p>A website for all your Psychic & Metaphysical needs. This site will utilize HTMl5, CSS3, and JS.
 										features to be included; Memberships, Pay to chat feature, individual profiles as well as a store.
-										This site should be live soon!
+										This site is still under constuction and should be live soon.
 									</p>
 									<hr />
 									<h2>Note's & To-Do App</h2>
