commit on 'master'

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Dylan Eurich Portfolio</title>
@@ -50,7 +46,13 @@
 					<div id="main">
 						<div class="inner">
 							<h1>About Me</h1>
-
+							<p>
+									I first started learning HTML and CSS in middle school when Myspace was the biggest thing. Fast forward, 
+								and I’m now the father of a 2-year-old, a 911 EMT, and currently a tower climber building 5G cell towers. 
+								Unfortunately, none of these career paths would support my family how I would have liked. I knew I needed something 
+								better! It was then that I stumbled across freecodecamp. I fell right back in love with coding, specifically 
+								JavaScript. I’ve spent all my free time since learning, reading, coding and I can’t stop.
+							</p>
 							<!-- Text -->
 								<section>
 									<h2>My Skillset</h2>
@@ -68,7 +70,7 @@
 									</div>
 								</section>
 							
-								<section>
+								<!-- <section>
 									<div class="row">
 										<div class="col-6 col-12-medium">
 											<h3>My Certificates</h3>
@@ -85,7 +87,7 @@
 												<li>Javascript Algorithms & Data Structures - freecodecamp</li>
 											</ul>
 										</div>
-									</div>
+									</div> -->
 				<!-- Footer -->
 				<footer id="footer">
 					<div class="inner">
