commit on 'master'

--- a/aboutme.html
+++ b/aboutme.html
@@ -64,7 +64,16 @@
 											<ul class="alt">
 												<li>Javascript - ES5 & ES6</li>
 												<li>HTML5 - SEO & Accessability</li>
-												<li>CSS3</li>
+												<li>CSS3 - Bootstrap</li>
+												<li>Github</li>
+											</ul>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-6 col-12-medium">
+											<h3>My Favorite Editor</h3>
+											<ul class="alt">
+												<li>Visual Studio Code</li>
 											</ul>
 										</div>
 									</div>
