--- a/projects.html
+++ b/projects.html
@@ -59,13 +59,13 @@
 									<h2 id="tetris">Tetris</h2>
 									<p><a href="Tetris/index.html">Live Version</a></p>
 									<p><a href="https://github.com/DEurich/Tetris">Github</a></p>
-									<p>Tetris was an app I coded about halfway through The Modern Javascript (2019) by Andrew Mead. 
+									<p>*Mobile controls coming soon!* Tetris was an app I coded about halfway through The Modern Javascript (2019) by Andrew Mead. 
 										I know that I learn by doing, and I needed a bigger project to work on that would require me to 
 										think, try, & apply. I had a lot of fun coding this. I learned way more than expected.
 									</p>
 									<hr />
 									<h2 id="technical-documentation">Technical Documentation Page</h2>
-									<p><a href="Technical Documentation Page/tech-doc.html">Live Version</a></p>
+									<p><a href="Technical Documentation Page/index.html">Live Version</a></p>
 									<p><a href="https://github.com/DEurich/Technical-Documentation-Page">Github</a></p>
 									<p>This was a template I designed as part of a freecodecamp project. It is built using HTML5 & CSS3 and 
 										serves as a wonderful base for simple websites.
@@ -74,7 +74,7 @@
 									<h2 id="weather-application">Weather App</h2>
 									<p><a href="Weather App/index.html">Live Version</a></p>
 									<p><a href="https://github.com/DEurich/Weather-App">Github</a></p>
-									<p> his was an app put together to show how I can properly use an API in a web application. A simple,
+									<p>*mobile coming soon* This was an app put together to show how I can properly use an API in a web application. A simple,
 										clean design, that does exactly what you need. This was a terrific project to work on. 
 										It was built using plain JavaScript, HTML5, and CSS3 while using the openweathermap.org API.
 									</p>
