commit on 'master'

--- a/Tetris/index.html
+++ b/Tetris/index.html
@@ -14,7 +14,7 @@
 
         canvas {
             outline: solid .2em #fff;
-            height: 65vh;
+            height: 60vh;
         }
 
 
@@ -26,11 +26,16 @@
             padding-bottom: 10px;
             padding-top: 0px;
         }
+
+        p {
+            font-size: 16px;
+        }
     
     </style>
 </head>
 <body>
     <h1>Tetris</h1>
+    <p>Controls: Q & W - Rotate * Arrows - Move pieces.</p>
     <div id="score"></div>
     <canvas id="tetris" width="240" height="400"></canvas>
     <script src='tetris.js'></script>
