--- a/aboutme.html
+++ b/aboutme.html
@@ -123,7 +123,7 @@
 							<h2>Follow</h2>
 							<ul class="icons">
 								<li><a href="https://twitter.com/DylanEurich" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://www.linkedin.com/in/dylan-eurich-6b772a57/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/dylan-eurich" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/DEurich" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></a></li>
 								<li><a href="mailto:dyl.eurich@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
